--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "@types/spotify-web-api-node": "^5.0.7",
+    "echarts": "^5.4.1",
+    "echarts-for-react": "^3.0.2",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
