--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
     "react": "18.2.0",
+    "react-battery-gauge": "^1.0.4",
     "react-dom": "18.2.0",
     "spotify-web-api-node": "^5.0.2",
     "typescript": "4.9.5"
